# Myrobot

./: .gitignore  README.md  encode.c  encode.h  log.txt  stm32.code-profile
Bsp/Inc/: MPU6050.h  ano.h  openmv.h  pid.h
Bsp/Src/: Kalman_Filter.c  MPU6050.c  ano.c  openmv.c  pid.c
FOC-stm32f103c8t6/FOC-CONTROL/: .mxproject  FOC-CONTROL.ioc
OPENCV_/: CMakeLists.txt  main.cpp
Python_venv/: Deal.py  app.py  index.html  main.py  视觉.md
car/car/: car.ioc
control-motor/: control-motor.ioc
control-motor/MDK-ARM/: control-motor.uvguix.Administrator  control-motor.uvoptx  control-motor.uvprojx  startup_stm32f103xb.lst
diansai/E_control/: .mxproject  E_control.ioc
image_deal/: image.md
openmv/: trace.py  串口通信.py
openmv/111/: 111.ioc
openmv/cmake/: .mxproject  CMakeLists.txt  cmake.ioc
openmv/m/: m.ioc
snack/: main.c  project.uvguix.Administrator  project.uvoptx  project.uvprojx
snack/Listings/: startup_stm32f10x_md.lst
snack/Objects/: core_cm3.crf  delay.crf  encode.crf  main.crf  menu.crf  menu_key.crf  misc.crf  motor_control.crf  mydma.crf  oled.crf  openmv.crf  pid.crf  project.axf  project.build_log.htm  project.htm  project.lnp  project_Target 1.dep  pwm_moter.crf  sensor.crf  serial.crf  servo.crf  soft_iic.crf  stm32f10x_adc.crf  stm32f10x_bkp.crf  stm32f10x_can.crf  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_exti.crf  stm32f10x_flash.crf  (+15 more)
two_select_stm32f103zet6/: .mxproject  2023E.ioc
树莓派yolo/: dic_lab.py  lablemetoyolo.py  proect_pycharm.lnk
电赛/: 2023E.ioc
(+1055 files in other folders)
